   - ofaTVARecordTreeview: rename column header (todo #1247).
   - UI: review dialog boxes layout (todo #1184).

 Bug fixes:

   - my_date_set_from_str(): fix parsing when input string is NULL.
   - ofaAccountProperties: fix error message when identifier is empty (todo #1256).
   - ofaCheckBalancesBin: does not increment account balances when amounts are nul (todo #1259).
   - ofaGuidedEx: fix operation template update.
   - ofaImporterPdf[Bourso,LCL]: read all lines pieces before merging them at once.
   - ofaLedgerProperties: balances frame fill all vertical space (todo #1289).
   - ofaMiscAuditUI: display DBMS audit trace (todo #1252).
   - ofaOpeTemplateProperties: does not double the rows count on Cancel (todo #1250).
   - ofaRecPeriodProperties: does not unref spin adjustment.
   - ofaRecPeriodProperties: fix UI widget name.
   - ofaRecurrentModelManagement: fix sort of 'Enabled' column (todo #1257).
   - ofaTVAFormProperties: does not unref spin adjustment.
   - ofaTVARecordPage: fix deletability check (todo #1248).

 Other changes:

   - ofaApplication: move initialization from instantiation to startup (todo #1272).
   - ofaDossierDeletePrefsBin: get rid of ofaSettings usage.
   - ofaExerciceTreeview: new class.
   - ofaHub: initialize from ofa_hub_new() (todo #1273).
   - ofaHub: manage both dossier and user settings.
   - ofaIAbout: have a ofaIGetter instance.
   - ofaIDateFilter: get rid of ofaSettings usage.
   - ofaIDBMeta interface is renamed to ofaIDBDossierMeta (todo #1274).
   - ofaIDBModel: update get a #ofaIGetter instead of a ofaHub (todo #1288).
   - ofaIDBPeriod interface is renamed to ofaIDBExerciceMeta (todo #1275).
   - ofaIGetter::get_theme_manager() is renamed to get_page_manager (todo #1279).
   - ofaITVColumnable: get rid of ofaSettings usage.
   - ofaITVSortable: get rid of ofaSettings usage.
   - ofaMiscAuditStore: new class.
   - ofaMiscAuditTreeview: new class.
   - ofaMysqlCmdline: get rid of ofaSettings usage.