@@ -406,8 +406,6 @@
 1287 2016-12-14 deprecate myIWindow::is_destroy_allowed() replacing it
                 by a my_iwindow_set_is_destroy_allowed() method
 
-1290 2016-12-16 hub is not finalized
-
 1291 2016-12-16 theorize read/write_[user]settings
 
 1292
@@ -2079,6 +2077,9 @@
 1289 2016-12-14 LedgerProperties/Balances tab: vertically expand the frame
                 (should be idem than account balances tab)
      2016-12-17 fixed
+
+1290 2016-12-16 hub is not finalized
+     2016-12-17 fixed (and plugins are successfully shutdowned)
 
 -----------------------------------------------------------------------
  P. Wieser - Created on 2014, may 2nd
